--- a/index.html
+++ b/index.html
@@ -7,15 +7,96 @@
     <title>Fit Track</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/301fc3fb33.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/style.css">
+
+    <style>
+        .track_format {
+            margin: auto;
+            width: 288px;
+        }
+
+        .form_p {
+            margin-bottom: 0;
+            min-width: 70px;
+        }
+
+        .form-row {
+            margin: 5px 10px;
+        }
+
+        .set_number:hover {
+            cursor: default;
+        }
+
+        .fa-plus {
+            margin-right: 10px;
+        }
+
+        .add_set:hover,
+        .add_exercise:hover {
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
 
+    <div class="track_format">
+
+        <h4 style="text-align: center;">Fit Track</h4>
+
+        <form>
+
+            <div class="form-row">
+                <input name="exercise1_name" type="text" class="form-control" placeholder="Exercise Name">
+            </div>
+
+            <div class="form-row">
+
+                <div class="col-auto set_number">
+
+                    <p class="form-control form_p">Set 1</p>
+
+                </div>
+
+                <div class="col-4">
+
+                    <!-- <label for="set1_weight">Set 1 Weight</label> -->
+
+                    <input name="set1_weight" type="text" class="form-control" placeholder="Weight">
+
+                </div>
+
+                <div class="col-4">
+
+                    <!-- <label for="set1_reps">Set 1 Reps</label> -->
+
+                    <input name="set1_reps" type="text" class="form-control" placeholder="Reps">
+
+                </div>
+
+            </div>
+
+        </form>
+
+        <div class="form-row">
+            <p class="form-control col form_p add_set"><i class="fas fa-plus"></i>ADD SET</p>
+        </div>
+
+        <hr>
+
+        <div class="form-row">
+
+            <p class="form-control col form_p add_exercise"><i class="fas fa-plus"></i>ADD EXERCISE</p>
+        </div>
+
+    </div>
+
+    <script>
 
 
-
-
+    </script>
 
     <div id="scripts" style="display: none !important;">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
