unhide create_exercise

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h4 style="text-align: center;"><i class="fas fa-dumbbell"></i>Fit Track<i class="fas fa-dumbbell"></i></h4>
 
-    <div id="create_exercise" style="display: none;">
+    <div id="create_exercise">
 
         <form id="new_workout">
 
