--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
 <body>
 
-    <h4 style="text-align: center;"><i class="fas fa-dumbbell"></i>Fit Track<i class="fas fa-dumbbell"></i></h4>
+    <div
+        style="text-align: center; margin: auto;margin-top: 25px; background: rgb(252, 128, 128); color: white; width: 100px; border-radius: 10px;">
+        <p>Work in Progress</p>
+    </div>
+
+    <h4 style="text-align: center; margin-top: 25px;"><i class="fas fa-dumbbell"></i>Fit Track<i
+            class="fas fa-dumbbell"></i></h4>
 
     <div id="create_exercise">
 
