Added view-workout function

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
         <div class="form-row">
-            <button id="submit_button" type="submit" class="btn btn-primary col">Save Exercise</button>
+            <button id="submit_button" type="submit" class="btn btn-primary col">Add Exercise to Workout</button>
         </div>
 
         <hr>
@@ -69,6 +69,16 @@
         <!-- <div class="form-row">
             <p class="form-control col form_p add_exercise"><i class="fas fa-plus"></i>ADD EXERCISE</p>
         </div> -->
+
+    </div>
+
+    <div class="" style="width: 278px; margin: auto;">
+
+        <button id="view_workout" class="btn btn-primary col">View Workout</button>
+
+        <div id="workout_builder">
+
+        </div>
 
     </div>
 
