Added button tags to new workout form template

--- a/index.html
+++ b/index.html
@@ -162,8 +162,13 @@
                 <input id="${wip[i]set[i].reps}" name="wip-reps" type="number" class="wafl"
                     style="border: none; width: 15%; text-align: center; font-weight: bold;" value="20" readonly>
 
-                <i class="far fa-trash-alt workout_current_set_icon" style="float: right;"></i>
-                <i class="far fa-edit edit_icon" style="float:right;"></i>
+                <button type="button" style="background: white; border: none; float:right;">
+                    <i class="far fa-trash-alt workout_current_set_icon" style=""></i>
+                </button>
+
+                <button type="button" style="background: white; border: none; float:right;">
+                    <i class="far fa-edit edit_icon" style=""></i>
+                </button>
 
             </div>
 
@@ -183,8 +188,13 @@
                 <input id="${wip[i]set[i].reps}" name="wip-reps" type="number" class="wafl"
                     style="border: none; width: 15%; text-align: center; font-weight: bold;" value="20" readonly>
 
-                <i class="far fa-trash-alt workout_current_set_icon" style="float: right;"></i>
-                <i class="far fa-edit edit_icon" style="float:right;"></i>
+                <button type="button" style="background: white; border: none; float:right;">
+                    <i class="far fa-trash-alt workout_current_set_icon" style=""></i>
+                </button>
+
+                <button type="button" style="background: white; border: none; float:right;">
+                    <i class="far fa-edit edit_icon" style=""></i>
+                </button>
 
             </div>
 
