Made icons bigger

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <button id="save-btn" class="save-btn" type="button"
                     style="background: white; border: none; float: right; display: none;">
                     <i class="far fa-save"
-                        style="background: #C1F388; font-size: 15px; padding: 5px; border-radius: 5px; margin-right: 5px; "></i>
+                        style="background: #C1F388; font-size: 20px; padding: 5px; border-radius: 5px; margin-right: 5px; margin-top: -0.1em; "></i>
                 </button>
 
             </div>
@@ -213,7 +213,7 @@
                 <button id="save-btn" class="save-btn" type="button"
                     style="background: white; border: none; float: right; display: none;">
                     <i class="far fa-save"
-                        style="background: #C1F388; font-size: 15px; padding: 5px; border-radius: 5px; margin-right: 5px; "></i>
+                        style="background: #C1F388; font-size: 20px; padding: 5px; border-radius: 5px; margin-right: 5px; margin-top: -0.1em;"></i>
                 </button>
 
             </div>
